Fix the nav by allowing items to wrap
You can see the issue when the window is ~800px wide — the row of nav items takes up so much space that the Pulsar logo gets tiny. This commit allows items to flow to a second row earlier in order to avoid this.

--- a/less/home.less
+++ b/less/home.less
@@ -102,6 +102,10 @@
 .sponsors {
   .top-level-element();
 
+  &__heading {
+    text-wrap: balance;
+  }
+
   &__inner {
     text-align: center;
     border-top: 1px solid var(--thematic-break-color);
